syntax = "proto3";

package shortener;

option go_package = "/shortener";

message ShortURL {
  string url = 1;
}

message LongURL {
  string url = 1;
}

service LinkShortener {
  rpc Create(LongURL) returns (ShortURL) {}
  rpc Get(ShortURL) returns (LongURL) {}
}
